add http server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 3.16...3.24)
 
-
-#set(CMAKE_CXX_STANDARD 20)
-
 include(cmake/cable/bootstrap.cmake)
 include(CableBuildType)
 include(CableCompilerSettings)
@@ -21,8 +18,6 @@ hunter_add_package(ethash)
 find_package(ethash CONFIG REQUIRED)
 add_subdirectory(evmc)
 
-
-
 set(include_dir ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_subdirectory(lib)
@@ -33,6 +28,9 @@ hunter_add_package(nlohmann_json)
 find_package(nlohmann_json CONFIG REQUIRED)
 add_subdirectory(state)
 
-add_executable(evm_server_cpp main.cpp)
-target_link_libraries(evm_server_cpp PRIVATE evmone::state nlohmann_json::nlohmann_json)
+hunter_add_package(Beast)
+find_package(Beast CONFIG REQUIRED)
+
+add_executable(evm_server_cpp main.cpp fields_alloc.hpp)
+target_link_libraries(evm_server_cpp PRIVATE Beast::Beast evmone::state nlohmann_json::nlohmann_json)
 target_link_libraries(evm_server_cpp PRIVATE evmc::evmc evmone)
