--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,6 @@ add_subdirectory(state)
 hunter_add_package(Beast)
 find_package(Beast CONFIG REQUIRED)
 
-add_executable(evm_server_cpp main.cpp fields_alloc.hpp)
+add_executable(evm_server_cpp main.cpp)
 target_link_libraries(evm_server_cpp PRIVATE Beast::Beast evmone::state nlohmann_json::nlohmann_json)
 target_link_libraries(evm_server_cpp PRIVATE evmc::evmc evmone)
